--- a/app/index.html
+++ b/app/index.html
@@ -10,17 +10,20 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="../app/assets/css/styles.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
 <div id="main-navigation">
   <ul class="menu">
     <li><a class="active" href="#/view1">Robert Yarborough</a></li>
-    <li><a href="#/view2">UI/UX Designer</a></li>
-  </ul>
-</div>
+    <li><a href="#/view2">Biography</a></li>
+    <li><a href="#/view3">Philosophy</a></li>
+    <li><a href="#/view4">Code Art</a></li>
+    <li><a href="#/view5">Products</a></li>
+    <li><a href="#/view6">Portfolio</a></li>
+  </ul><!--end menu-->
+</div><!--end main-navigation-->
 <!--end main-navigation-->
 
 
