routing re-configured

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -48,11 +48,12 @@
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
+    <li><a href="#/view3">view3</a></li>
   </ul>
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+  <footer>&copy; 2015 Robert Yarborough | Living By Design </footer>
 
 </body>
 </html>
