--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,9 @@
     <li><a class="active" href="#/view1">Robert Yarborough</a></li>
     <li><a href="#/view2">Biography</a></li>
     <li><a href="#/view3">Philosophy</a></li>
-    <li><a href="#/view4">Code Art</a></li>
+    <!--<li><a href="#/view4">Code Art</a></li>
     <li><a href="#/view5">Products</a></li>
-    <li><a href="#/view6">Portfolio</a></li>
+    <li><a href="#/view6">Portfolio</a></li>-->
   </ul><!--end menu-->
 </div><!--end main-navigation-->
 <!--end main-navigation-->
@@ -32,9 +32,7 @@
   <![endif]-->
 <!--main-content-->
   <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
-
+  <footer>&copy; 2015 Robert Yarborough | Living By Design </footer>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
