--- a/app/index.html
+++ b/app/index.html
@@ -19,18 +19,13 @@
     <li><a class="active" href="#/view1">Robert Yarborough</a></li>
     <li><a href="#/view2">Biography</a></li>
     <li><a href="#/view3">Philosophy</a></li>
-    <!--<li><a href="#/view4">Code Art</a></li>
+    <li><a href="#/view4">Code-Art</a></li>
     <li><a href="#/view5">Products</a></li>
-    <li><a href="#/view6">Portfolio</a></li>-->
+    <li><a href="#/view6">Portfolio</a></li>
   </ul><!--end menu-->
 </div><!--end main-navigation-->
 <!--end main-navigation-->
 
-
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-<!--main-content-->
   <div ng-view></div>
   <footer>&copy; 2015 Robert Yarborough | Living By Design </footer>
   <!-- In production use:
